--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,12 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">
+      {{ site.title }}
+    </a>
+    <div class="site-title-description">
+      {{ site.description }}
+    </div>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
