fixed styling in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <!-- <h2 class="footer-heading">{{ site.title }}</h2> -->
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
@@ -11,8 +11,10 @@
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
+      
+      <div class="footer-col footer-col-2"></div>
 
-      <div class="footer-col  footer-col-2">
+      <div class="footer-col  footer-col-3">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -45,9 +47,9 @@
         </ul>
       </div>
 
-      <div class="footer-col  footer-col-3">
+      <!-- <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
-      </div>
+      </div> -->
     </div>
 
   </div>
