--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,9 @@
         </ul>
       </div>
       
-      <div class="footer-col footer-col-2"></div>
+      <div class="footer-col footer-col-2">
+        <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+      </div>
 
       <div class="footer-col  footer-col-3">
         <ul class="social-media-list">
@@ -46,10 +48,6 @@
           {% endif %}
         </ul>
       </div>
-
-      <!-- <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
-      </div> -->
     </div>
 
   </div>
