--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ comments: true
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'erresen';
-        
+        var disqus_url = '{{ site.url }}{{ page.url }}';
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
