changed to inconsolata for the site desc

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,6 +26,7 @@
 
 .site-title-description {
     @extend .site-title;
+    font-family: 'Inconsolata';
     font-weight: 100;
     float: right;
 
