--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -131,6 +131,7 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #eef;
+    font-family: 'Inconsolata', monospace;
 }
 
 code {
