--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -131,7 +131,7 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     //background-color: #eef;
-    font-family: 'Inconsolata', monospace;
+    font-family: Monaco, Inconsolata, monospace;
 }
 
 code {
