--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,81 +1,71 @@
-$bg-color: #151427; //  background
-$base01:   #9F9F9F; //  comments / secondary content
-$body:     #DDECEC; //  body text / default code / primary content
-$orange:   #FF8900; //  constants
-$red:      #FF2B27; //  regex, special keywords
-$blue:     #6DC2FD; //  reserved keywords
-$cyan:     #69FFF4; //  strings, numbers
-$green:    #3AE25C; //  operators, other keywords
-
 .highlight {
-    background-color: $bg-color; color: $body;
+    
+    background-color: #272822; 
 
-    .c { color: $base01; } /* Comment */
-    .err { color: $body; } /* Error */
-    .g { color: $body; } /* Generic */
-    .k { color: $green; } /* Keyword */
-    .l { color: $body; } /* Literal */
-    .n { color: $body; } /* Name */
-    .o { color: $green; } /* Operator */
-    .x { color: $orange; } /* Other */
-    .p { color: $body; } /* Punctuation */
-    .cm { color: $base01; } /* Comment.Multiline */
-    .cp { color: $green; } /* Comment.Preproc */
-    .c1 { color: $base01; } /* Comment.Single */
-    .cs { color: $green; } /* Comment.Special */
-    .gd { color: $cyan; } /* Generic.Deleted */
-    .ge { color: $body;; font-style: italic } /* Generic.Emph */
-    .gr { color: $red; } /* Generic.Error */
-    .gh { color: $orange; } /* Generic.Heading */
-    .gi { color: $green; } /* Generic.Inserted */
-    .go { color: $body; } /* Generic.Output */
-    .gp { color: $body; } /* Generic.Prompt */
-    .gs { color: $body;; font-weight: bold } /* Generic.Strong */
-    .gu { color: $orange; } /* Generic.Subheading */
-    .gt { color: $body; } /* Generic.Traceback */
-    .kc { color: $orange; } /* Keyword.Constant */
-    .kd { color: $blue; } /* Keyword.Declaration */
-    .kn { color: $green; } /* Keyword.Namespace */
-    .kp { color: $green; } /* Keyword.Pseudo */
-    .kr { color: $blue; } /* Keyword.Reserved */
-    .kt { color: $red; } /* Keyword.Type */
-    .ld { color: $body; } /* Literal.Date */
-    .m { color: $cyan; } /* Literal.Number */
-    .s { color: $cyan; } /* Literal.String */
-    .na { color: $body; } /* Name.Attribute */
-    .nb { color: $orange } /* Name.Builtin */
-    .nc { color: $blue; } /* Name.Class */
-    .no { color: $orange; } /* Name.Constant */
-    .nd { color: $blue; } /* Name.Decorator */
-    .ni { color: $orange; } /* Name.Entity */
-    .ne { color: $orange; } /* Name.Exception */
-    .nf { color: $blue; } /* Name.Function */
-    .nl { color: $body; } /* Name.Label */
-    .nn { color: $body; } /* Name.Namespace */
-    .nx { color: $body; } /* Name.Other */
-    .py { color: $body; } /* Name.Property */
-    .nt { color: $blue; } /* Name.Tag */
-    .nv { color: $blue; } /* Name.Variable */
-    .ow { color: $green; } /* Operator.Word */
-    .w  { color: $body; } /* Text.Whitespace */
-    .mf { color: $cyan; } /* Literal.Number.Float */
-    .mh { color: $cyan; } /* Literal.Number.Hex */
-    .mi { color: $cyan; } /* Literal.Number.Integer */
-    .mo { color: $cyan; } /* Literal.Number.Oct */
-    .sb { color: $base01 } /* Literal.String.Backtick */
-    .sc { color: $cyan; } /* Literal.String.Char */
-    .sd { color: $body; } /* Literal.String.Doc */
-    .s2 { color: $cyan; } /* Literal.String.Double */
-    .se { color: $orange; } /* Literal.String.Escape */
-    .sh { color: $body; } /* Literal.String.Heredoc */
-    .si { color: $cyan; } /* Literal.String.Interpol */
-    .sx { color: $cyan; } /* Literal.String.Other */
-    .sr { color: $red; } /* Literal.String.Regex */
-    .s1 { color: $cyan; } /* Literal.String.Single */
-    .ss { color: $cyan; } /* Literal.String.Symbol */
-    .bp { color: $blue; } /* Name.Builtin.Pseudo */
-    .vc { color: $blue; } /* Name.Variable.Class */
-    .vg { color: $blue; } /* Name.Variable.Global */
-    .vi { color: $blue; } /* Name.Variable.Instance */
-    .il { color: $cyan; } /* Literal.Number.Integer.Long */
+    .hll { background-color: #22282A }
+    .c { color: #99AA8A } /* Comment */
+    .err { color: #960050; background-color: #1e0010 } /* Error */
+    .k { color: #93C763 } /* Keyword */
+    .l { color: #ae81ff } /* Literal */
+    .n { color: #F1F2F3 } /* Name */
+    .o { color: #E8E2B7 } /* Operator */
+    .p { color: #F1F2F3 } /* Punctuation */
+    .ch { color: #99AA8A } /* Comment.Hashbang */
+    .cm { color: #99AA8A } /* Comment.Multiline */
+    .cp { color: #99AA8A } /* Comment.Preproc */
+    .cpf { color: #99AA8A } /* Comment.PreprocFile */
+    .c1 { color: #99AA8A } /* Comment.Single */
+    .cs { color: #99AA8A } /* Comment.Special */
+    .gd { color: #E8E2B7 } /* Generic.Deleted */
+    .ge { font-style: italic } /* Generic.Emph */
+    .gi { color: #678CB1 } /* Generic.Inserted */
+    .gs { font-weight: bold } /* Generic.Strong */
+    .gu { color: #99AA8A } /* Generic.Subheading */
+    .kc { color: #93C763 } /* Keyword.Constant */
+    .kd { color: #93C763 } /* Keyword.Declaration */
+    .kn { color: #E8E2B7 } /* Keyword.Namespace */
+    .kp { color: #93C763 } /* Keyword.Pseudo */
+    .kr { color: #93C763 } /* Keyword.Reserved */
+    .kt { color: #83D8E1 } /* Keyword.Type */
+    .ld { color: #EC7600 } /* Literal.Date */
+    .m { color: #FFCD22 } /* Literal.Number */
+    .s { color: #EC7600 } /* Literal.String */
+    .na { color: #678CB1 } /* Name.Attribute */
+    .nb { color: #F1F2F3 } /* Name.Builtin */
+    .nc { color: #678CB1 } /* Name.Class */
+    .no { color: #93C763 } /* Name.Constant */
+    .nd { color: #678CB1 } /* Name.Decorator */
+    .ni { color: #F1F2F3 } /* Name.Entity */
+    .ne { color: #678CB1 } /* Name.Exception */
+    .nf { color: #678CB1 } /* Name.Function */
+    .nl { color: #F1F2F3 } /* Name.Label */
+    .nn { color: #F1F2F3 } /* Name.Namespace */
+    .nx { color: #678CB1 } /* Name.Other */
+    .py { color: #F1F2F3 } /* Name.Property */
+    .nt { color: #E8E2B7 } /* Name.Tag */
+    .nv { color: #F1F2F3 } /* Name.Variable */
+    .ow { color: #E8E2B7 } /* Operator.Word */
+    .w { color: #F1F2F3 } /* Text.Whitespace */
+    .mb { color: #FFCD22 } /* Literal.Number.Bin */
+    .mf { color: #FFCD22 } /* Literal.Number.Float */
+    .mh { color: #FFCD22 } /* Literal.Number.Hex */
+    .mi { color: #FFCD22 } /* Literal.Number.Integer */
+    .mo { color: #FFCD22 } /* Literal.Number.Oct */
+    .sb { color: #EC7600 } /* Literal.String.Backtick */
+    .sc { color: #EC7600 } /* Literal.String.Char */
+    .sd { color: #EC7600 } /* Literal.String.Doc */
+    .s2 { color: #EC7600 } /* Literal.String.Double */
+    .se { color: #ae81ff } /* Literal.String.Escape */
+    .sh { color: #EC7600 } /* Literal.String.Heredoc */
+    .si { color: #EC7600 } /* Literal.String.Interpol */
+    .sx { color: #EC7600 } /* Literal.String.Other */
+    .sr { color: #EC7600 } /* Literal.String.Regex */
+    .s1 { color: #EC7600 } /* Literal.String.Single */
+    .ss { color: #EC7600 } /* Literal.String.Symbol */
+    .bp { color: #F1F2F3 } /* Name.Builtin.Pseudo */
+    .vc { color: #F1F2F3 } /* Name.Variable.Class */
+    .vg { color: #F1F2F3 } /* Name.Variable.Global */
+    .vi { color: #F1F2F3 } /* Name.Variable.Instance */
+    .il { color: #FFCD22 } /* Literal.Number.Integer.Long */
 }
+
