fixed pre code styling

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -130,7 +130,8 @@ code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-    //background-color: #eef;
+    background-color: #22282A;
+    color: #99AA8A;
     font-family: Monaco, Inconsolata, monospace;
 }
 
