--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,5 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   <link href='http://fonts.googleapis.com/css?family=Inconsolata|Lato:300,400,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="/js/typeytype.js"></script>
 </head>
