--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -193,6 +193,10 @@
         padding-bottom: $spacing-unit;
         margin-bottom: $spacing-unit;
     }
+    
+    .post-title::before {
+        content: "> "
+    }
 }
 
 .post-meta {
