--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div class="post">
 
   <header class="post-header">
-    <h1 class="post-title" style="display: none;">{{ page.title }}</h1>
+    <h1 class="post-title"><span class="white-out">{{ page.title }}</span></h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
@@ -30,6 +30,6 @@ layout: default
   {% endif %}
 
   <script type="text/javascript">
-    $(typeyType($('.post-title')));
+    $(overType($('.post-title')));
   </script>
 </div>
