--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,12 @@
   <link href='http://fonts.googleapis.com/css?family=Inconsolata|Lato:300,400,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/overtype.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167878703-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-167878703-1');
+  </script>
 </head>
