--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,7 +2,7 @@
     
     background-color: #272822; 
 
-    .hll { background-color: #22282A }
+    .hll { background-color: #272822 }
     .c { color: #99AA8A } /* Comment */
     .err { color: #960050; background-color: #1e0010 } /* Error */
     .k { color: #93C763 } /* Keyword */
