--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -143,7 +143,7 @@ code {
   border-radius: 3px;
   background-color: #272822;
   color: #99aa8a;
-  font-family: Monaco, Inconsolata, monospace;
+  font-family: "Fira Code", Monaco, Consolas, monospace;
 }
 
 code {
