--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,6 +1,6 @@
 .highlight {
     
-    background-color: #272822; 
+    //background-color: #272822; 
 
     .hll { background-color: #272822 }
     .c { color: #99AA8A } /* Comment */
