--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -139,7 +139,7 @@ blockquote {
 pre,
 code {
   font-size: 15px;
-  border: 1px solid $grey-color-light;
+  //border: 1px solid $grey-color-light;
   border-radius: 3px;
   background-color: #272822;
   color: #99aa8a;
