serif content font

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -173,6 +173,7 @@
  * Page content
  */
 .page-content {
+  font-family: $base-post-font-family;
   padding: $spacing-unit 0;
   font-weight: 300;
 }
