--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 
 // Our variables
 $base-font-family: Lato, Helvetica, Arial, sans-serif;
+$base-post-font-family: "Roboto Slab", serif;
 $base-font-size: 16px;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
