--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -176,6 +176,10 @@
   font-family: $base-post-font-family;
   padding: $spacing-unit 0;
   font-weight: 300;
+
+  strong {
+    font-weight: 700;
+  }
 }
 
 .page-heading {
