--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,5 +31,5 @@
 
     gtag("config", "UA-167878703-1");
   </script>
-  <script src="/js/cookieconsent.js" async></script>
+  <script src="/js/cookieconsent.js?v=5f349205-f2cb-4fca-94d1-c3daefc87476" async></script>
 </head>
