--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,15 +21,15 @@
     href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&family=Lato:wght@300;400;700&family=Roboto+Slab:wght@300;700&display=swap"
     rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167878703-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    gtag("config", "UA-167878703-1");
+    gtag('config', 'UA-167878703-1');
   </script>
+
   <script src="/js/cookieconsent.js?v=5f349205-f2cb-4fca-94d1-c3daefc87476" async></script>
 </head>
