--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -241,6 +241,7 @@
   margin-bottom: $spacing-unit;
 
   h2 {
+    margin-top: 3rem;
     font-size: 32px;
 
     @include media-query($on-laptop) {
@@ -249,6 +250,7 @@
   }
 
   h3 {
+    margin-top: 3rem;
     font-size: 26px;
 
     @include media-query($on-laptop) {
@@ -257,6 +259,7 @@
   }
 
   h4 {
+    margin-top: 3rem;
     font-size: 20px;
 
     @include media-query($on-laptop) {
