--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
   <div class='cookieConsentContainer' id='cookieConsentContainer'>
     <div class='cookieDesc'>
-      <p>This website uses cookies to ensure you get the best experience. For more details, see the <a href='/privacy'
+      <p>This website uses cookies to ensure you get the best experience. For more details, see the <a href='/privacy/'
           target='_blank'>privacy policy</a>.</p>
     </div>
     <div class='cookieButton'><a onClick='purecookieDismiss();'>ACCEPT</a></div>
