--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li><a href="{{ site.url }}/privacy">Privacy Policy</a></li>
+          <li><a href="{{ site.url }}/privacy/">Privacy Policy</a></li>
         </ul>
       </div>
 
