added adsense head script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,7 @@
   </script>
 
   <script src="/js/cookieconsent.js?v=5f349205-f2cb-4fca-94d1-c3daefc87476" async></script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5648299756902319"
+     crossorigin="anonymous"></script>
 </head>
