--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,17 @@
   <div class="page-content">
     <div class="wrapper">
       {{ content }}
+      <div class="sidebar">
+        <script async
+          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5648299756902319"
+          crossorigin="anonymous"></script>
+        <!-- Responsive -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5648299756902319"
+          data-ad-slot="5520282421" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
     </div>
   </div>
 
