--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,15 @@ layout: default
       {{ page.date | date: "%b %-d, %Y" }}
       {% if page.updated %} (last update: {{ page.updated | date: "%b %-d, %Y" }}){% endif %}
       {% if page.author %} • {{ page.author }}{% endif %}
-      {% if page.meta %} • {{ page.meta }}{% endif %}</p>
+      {% if page.meta %} • {{ page.meta }}{% endif %}
+      {% if page.tags %} • 
+      {% assign tags = page.tags | sort %}
+      {% for tag in tags %}
+      <a href="{{site.baseurl}}/tags/#{{tag|slugize}}">{{tag}}</a>
+      {% unless forloop.last %}&nbsp;{% endunless %}
+      {% endfor %}
+      {% endif %}
+    </p>
   </header>
 
   <article class="post-content">
